k8s-specifications/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
    apptype: backend
  name: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
      severity: critical
      apptype: backend
  strategy:
    type: RollingUpdate
    RollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: result
        severity: critical
        apptype: backend
      annotations:
        argocd.argoproj.io/sync-wave: "0"
        kubernetes.io/change-cause: "Redeploy to pull latest image"
    spec:
      imagePullSecrets:
        - name: imagesecret
      containers:
      - image: vijaykvv/votingapp_result:latest-15081911970-36
        name: result
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: result
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
