k8s-specifications/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
    apptype: frontend
  name: vote
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
      severity: critical
      apptype: frontend
  strategy:
    type: RollingUpdate
    RollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: vote
        severity: critical
        apptype: frontend
      annotations:
        argocd.argoproj.io/sync-wave: "0"
        kubernetes.io/change-cause: "Redeploy to pull latest image" 
    spec:
      imagePullSecrets:
        - name: imagesecret
      containers:
      - image: vijaykvv/votingapp_vote:latest-17681603543-51
        name: vote
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: vote
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
