k8s-specifications/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
      severity: critical
  strategy:
    type: RollingUpdate
    RollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: worker
      annotations:
        argocd.argoproj.io/sync-wave: "0"
        kubernetes.io/change-cause: "Redeploy to pull latest image"
    spec:
      imagePullSecrets:
        - name: imagesecret
      containers:
      - image: vijaykvv/votingapp_worker:latest-14947086471-12
        name: worker
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
